--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 .parent {
     background: teal;
+    min-height: 30px;
     margin-bottom: 1rem;
-  }
-  
-  .child {
-    width: 90%;
+}
+
+.child {
     background: salmon;
-    max-width: 200px;
-  }
+}
