--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,30 @@
 body {
     font-size: 20px;
-}
-/* 
-    ширина container 360  
-    или 4 раза по 90  
+  }
+  /* 
+    ширина container 480  
+    или 3 раза по 160  
   */
-.container {
-    font-size: 0;
-    width: 360px;
+  .container {
+    width: 480px;
     margin: auto;
     padding-top: 15px;
     background: burlywood;
-}
-
-/* 
-    ширина box 15 + 60 + 15
-    или 90  
+    font-size: 0;
+  }
+  
+  /* 
+    ширина box x + 130 + x
+    или 160  
   */
-.box {
-    font-size: 1rem;
-    width: 60px;
+  .box {
     margin: 0 15px 15px;
+    width: 130px;
     height: 75px;
     line-height: 75px;
     background-color: teal;
     display: inline-block;
     text-align: center;
     color: #fff;
-}
+    font-size: 1rem;
+  }
